--- a/TODO
+++ b/TODO
@@ -1,11 +1,6 @@
 
 
 
-
-
-* pathfind check if still in same node or need to send new goal to
-   steer on pos update
-
 * control should keep track of steer state and send commands only when
    change necessary
 ** maybe also throttle timing
@@ -33,3 +28,5 @@ probably done, but check again:
    deviation to distance ratio should be about 1/5 or below when
    accelerating
 
+* pathfind still same curnode on pos update / quadtree:next_subgoal
+   method "could be better"
