move quadtrees MINSIZE macro into MinSize variable sent from main on startup

--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ TOPIC:
 ------
 * steering should check for necessity of urgent crater/martian/boulder
    avoidance necessity using future_pos
+** DONE, except for martians
 * top level control should count runs and results and adjust our top speed accordingly
 
 
